# ds-transport-calibration

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  codecov.yaml  environment.yaml  pip.conf  pyproject.toml  requirements.txt  setup.cfg  setup.py  sonar-project.properties
.github/: pull_request_template.md
.github/workflows/: main.yaml  pull-request.yaml  release.yaml  rename.yaml
src/ds_transport_calibration/: __init__.py  __main__.py
src/transport_calibration/: __init__.py  transport_calibration.py  transport_calibration_one_cov.py  transport_calibration_xgboost_wrapper.py
tests/: __init__.py  test_ds_transport_calibration.py  test_hello_world.py  test_transport_calibration.py  test_transport_calibration_one_cov.py  test_transport_calibration_xgboost_wrapper.py  transport_calibration_one_cov_testing_utils.py  transport_calibration_testing_utils.py  transport_calibration_xgboost_wrapper_testing_utils.py
