[build-system]
requires = ["setuptools >= 42", "versioningit", "wheel"]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
default-tag = "0.0.0"

[tool.versioningit.format]
dirty = "{base_version}+dev.{rev}"                     # 1.0.0+dev.30d9c3f
distance = "{base_version}+dev{distance}"              # 1.0.0+dev24
distance-dirty = "{base_version}+dev{distance}.{rev}"  # 1.0.0+dev24.30d9c3f
