[metadata]
name = ds-transport-calibration
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/projectronin/ronin-blueprint-python-lib
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

package_dir =
    = src
packages = find:
python_requires = >=3.8

[options]
install_requires =
    numpy
    pandas
    scikit-learn

[options.extras_require]
test =
    pyspark==3.2.1

[options.packages.find]
where = src
